<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">LTH Store</string>
    <string name="first_slide">Choose Your Products</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide">Good Service</string>
    <string name="description">Lorem Ipsum is simple dummy text of the printing and typesetting industrys standard dummy text ever since the</string>


    <!--    Da ngôn ngữ-->
    <!--    Sign in-->
    <string name="strTitleSignIn">Sign In</string>
    <string name="strHintUsername">Username</string>
    <string name="strHintEmail">Email Address</string>
    <string name="strHintPassword">Password</string>
    <string name="strForgotPassword">Forgot Password ?</string>
    <string name="strNotHaveAccount">Don\'t Have An Account ?</string>

    <!--    Sign up-->
    <string name="strTitleSignUp">Sign Up</string>
    <string name="strHaveAccount">Already Have An Account ?</string>
    <!--    forgot password--> strTitleContinue
    <string name="strTitleForgotPassword">Forgot Password</string>
    <string name="strTitleContinue">Continue</string>


    <string name="strMenuChangePassword">Change Password</string>
    <string name="strMenuLogout">Logout</string>

    <string name="strResetPassword">Reset Password</string>


    <string name="strCurrentPassword">Current Password</string>
    <string name="strNewPassword">New Password</string>
    <string name="strConfirmPassword">Confirm Password</string>


    <string name="strTitleUpdate">Update</string>
    <string name="strTitleNewProductHome">New</string>
    <string name="strTitleCategory">Category</string>
    <string name="strTitleSeeAll">See All</string>
    <string name="strTitleNewProducts">New Products</string>
    <string name="strTitleFlashSaleProducts">Flash Sale</string>
    <string name="strTitlePopularProduct">Popular Products</string>
    <string name="strTitleHomeNavigation">Home</string>
    <string name="strTitleProductNavigation">Products</string>
    <string name="strTitleOrderNavigation">Orders</string>
    <string name="strTitleProfileNavigation">Profile</string>
    <string name="strTitleSearchHome">Search</string>
    <string name="strSize">Size</string>
    <string name="strColor">Color</string>
    <string name="strTitleReviewNull">No reviews yet</string>

    <string name="strTitleProductTablayout">Product</string>

    <string name="strTitleReviewTablayout">Reviews</string>

    <string name="strTitleSuggesForYou">Suggestions for you</string>
    <string name="strTitleSameProductDetail">Similar product</string>
    <string name="strTitleProductOfShop">Products of the shop</string>
    <string name="strTitleProductDescription">Product Description</string>
    <string name="strTitleEstimatedDeliveryInformation">Estimated delivery information</string>
    <string name="strTitleChooseSize">How to choose size</string>
    <string name="strTitleReturnPolicy">Return Policy</string>
    <string name="strTitleReviewProduct">REVIEW PRODUCT</string>
    <string name="strTitleChatWithShop">Chat now with the shop</string>
    <string name="strTitleAddToCart">Add To Cart</string>

    <string name="strTitleBuyNow">BUY NOW</string>
    <string name="strTitleMyCart">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>