<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/designlogin2"
    tools:context=".activities.authActivities.RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/strTitleSignUp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/textHeading"
        app:layout_constraintVertical_bias="0.18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUsername"
        android:background="@drawable/edit_text_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/strHintUsername"
        android:inputType="textPersonName"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_account_circle"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/strHintEmail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUsername"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_bg"
        android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
        android:drawableRight="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="10dp"
        android:elevation="3dp"
        android:hint="@string/strHintPassword"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/button"
        app:layout_constraintWidth_percent=".4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="signUpRegisterClicked"
        android:text="@string/strTitleSignUp"
        android:textSize="20sp"
        android:padding="15dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strHaveAccount"
        android:textSize="17sp"
        app:layout_constraintVertical_bias=".2"
        app:layout_constraintHorizontal_bias=".3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTitleSignIn"
        android:textColor="@color/pink"
        android:textSize="19sp"
        android:onClick="signInRegisterClicked"
        android:layout_marginLeft="2dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>