<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ReviewProductFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleSameProductDetail"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/suggestion_product_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/amethysta"
                        android:gravity="end"
                        android:text="@string/strTitleSeeAll"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_margin="5dp"
                    android:id="@+id/rec_product_same_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateIds" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleProductOfShop"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/product_of_shop_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="0dp"
                        android:fontFamily="@font/amethysta"
                        android:gravity="end"
                        android:text="@string/strTitleSeeAll"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_margin="5dp"
                    android:id="@+id/rec_product_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>