<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">
    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/image_slider"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:iss_auto_cycle="true"
            app:iss_delay="0"
            app:iss_period="1000"
            tools:ignore="MissingClass" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="0dp"
            android:elevation="6dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleCategory"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/category_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/amethysta"
                        android:gravity="end"
                        android:text="@string/strTitleSeeAll"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rec_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="0dp"
            android:elevation="6dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/new_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleNewProducts"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/new_product_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleSeeAll"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/new_product_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_marginTop="6dp"
                    android:padding="5dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="0dp"
            android:elevation="6dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/sale_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitlesaleProducts"
                        android:textSize="21sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/flash_sale_product_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleSeeAll"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/sale_product_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="7dp"
                    android:layout_marginTop="6dp"
                    android:padding="5dp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="0dp"
            android:elevation="6dp"
            app:cardCornerRadius="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/popular_products"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitlePopularProduct"
                        android:textSize="21sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/popular_see_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginRight="8dp"
                        android:fontFamily="@font/amethysta"
                        android:text="@string/strTitleSeeAll"
                        android:textColor="@color/pink"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_rec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="7dp"
                    android:layout_marginTop="6dp"
                    android:padding="5dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>